--- a/src/components/Daon/index.module.scss
+++ b/src/components/Daon/index.module.scss
@@ -1,4 +1,5 @@
 @import "../../mixins";
+
 .selfie-screen-scanning {
     width: 100%;
     display: flex;
@@ -6,6 +7,7 @@
     align-items: center;
     // z-index: -1;
 }
+
 .selfie-feed {
     max-width: 100%;
     z-index: -1;
@@ -21,13 +23,16 @@
     border-bottom-right-radius: 250px;
     border: 3px solid #b6b6b6;
     overflow: hidden;
+
     @include mob-large() {
         width: 300px;
         height: 400px;
     }
+
     video {
         object-fit: cover;
         height: 100%;
+        width: 100%;
     }
 }
 
